# QtCppVisualStudioCodeTemplate

./: .gitignore  CMakeLists.txt  README.md  main.cpp
scripts/: build.sh  run.sh
